--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9117,28 +9117,26 @@ zip.file("_micCal.txt", micCal);
         const rpData = await postNext('Arithmetic', [idx, tcIdx], {function: "|A| / |B|"});
         const rpIdx = parseInt(Object.keys(rpData.results));
         const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', rpIdx);
-        const bytes = Uint8Array.from(atob(response.magnitude), c => c.charCodeAt(0));
-        const buffer = bytes.buffer;
-        const data = new DataView(buffer);
+        const rpArray = response2array(response, 10, 250);
         const octave = Math.pow(2, 1/96);
-        let freq = response.startFreq, k = 0;
-        while (freq < 10) { freq *= octave, k++; } // ignore noise below 10hz
-        // find -3dB point
-        let magnitude = data.getFloat32(k * 4);
-        while (magnitude < -3) {
-          magnitude = data.getFloat32(++k * 4);
-          freq *= octave;
-        }
-        const rolloff = Math.max(findNearestXO(freq), 40);
-        console.info(`${cmdIds} - roll-off: ${freq.toFixed(2)}Hz → Initial XO: ${rolloff}hz`);
-        customCrossover[(i - nSpeakers) / 2] = rolloff;
+        // cleanup
         await postDelete(rpIdx);
+        if (!singleChannel) { await postDelete(idx); }
+        // find -3dB point
+        let rolloff = 10;
+        for (let j = 0; j < rpArray.length; j++) {
+          if (rpArray[j] >= -3) { break; }
+          rolloff *= octave;
+        }
+        const initialXO = Math.max(findNearestXO(rolloff), 40);
+        customCrossover[(i - nSpeakers) / 2] = initialXO;
         if (!singleChannel) {
-          customCrossover[1 + (i - nSpeakers) / 2] = rolloff;
-          await postDelete(idx);
+          customCrossover[1 + (i - nSpeakers) / 2] = initialXO;
           i += 2;
         }
+        console.info(`${cmdIds} - roll-off: ${rolloff.toFixed(2)}Hz → Initial XO: ${initialXO}hz`);
       }
+      // cleanup
       await postDelete(tcIdx);
     }
     async function calculateSubBandwidth() {
@@ -9152,31 +9150,28 @@ zip.file("_micCal.txt", micCal);
       const rpData = await postNext('Arithmetic', [mCount, tcIdx], {function: "|A| / |B|"});
       const rpIdx = parseInt(Object.keys(rpData.results));
       const response = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', rpIdx);
-      const bytes = Uint8Array.from(atob(response.magnitude), c => c.charCodeAt(0));
-      const buffer = bytes.buffer;
-      const data = new DataView(buffer);
+      const rpArray = response2array(response, 10, 250);
       const octave = Math.pow(2, 1/96);
-      let freq = response.startFreq, k = 0;
-      while (freq < 10) { freq *= octave, k++; } // ignore noise below 10hz
-      // find low freq -3dB point
-      let magnitude = data.getFloat32(k * 4);
-      while (magnitude < -3) {
-        magnitude = data.getFloat32(++k * 4);
-        freq *= octave;
-      }
-      subLowFreq = Math.max(10, freq);
-      Object.freeze(subLowFreq);
-      // find high freq -3dB point
-      while (k * 4 < data.byteLength && freq <= 250) {
-        magnitude = data.getFloat32(k++ * 4);
-        freq *= octave;
-        if (magnitude >= -3) {
-          subHighFreq = Math.min(freq, 250);
-        }
-      }
-      Object.freeze(subHighFreq);
+      // cleanup
       await postDelete(rpIdx);
       await postDelete(tcIdx);
+      // find low freq -3dB point
+      let rolloffLow = 10;
+      for (let i = 0; i < rpArray.length; i++) {
+        if (rpArray[i] >= -3) { break; }
+        rolloffLow *= octave;
+      }
+      subLowFreq = Math.max(10, rolloffLow);
+      Object.freeze(subLowFreq);
+      // find high freq -3dB point
+      let rolloffHigh = 250;
+      for (let i = rpArray.length - 1; i >= 0; i--) {
+        if (rpArray[i] >= -3) { break; }
+        rolloffHigh /= octave;
+      }
+      subHighFreq = Math.min(250, rolloffHigh);
+      Object.freeze(subHighFreq);
+      // log bandwidth and usable XO range
       const minXO = Math.max(findNearestXO(2 * subLowFreq), 40);
       const maxXO = Math.min(findNearestXO(subHighFreq), 250);
       console.info(`${commandId[nSpeakers].padStart(3, ".")} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz → Usable XO range: ${minXO}hz - ${maxXO}hz`);
@@ -9300,10 +9295,13 @@ zip.file("_micCal.txt", micCal);
         // finalize xo that is closest match to target curve
         const rolloff = parseFloat(customCrossover[(i - nSpeakers) / 2]);
         let bestXO = rolloff, minRmsError = Infinity;
+        console.info("Starting...");
         for (let j = 0; j < freqIndex.length; j++) {
           let checkXO = freqIndex[j];
           // don't look at XO below speaker rolloff, above 2x rolloff or outside sub bandwidth
           if (checkXO < Math.max(rolloff, minXO) || checkXO > Math.min(2 * rolloff, maxXO)) { continue; }
+          // final XO determination logic
+          console.infoUpdate(`${cmdIds} - Initial XO: ${rolloff}hz → Checking XO: ${checkXO}hz, Best XO: ${bestXO}hz`);
           if (singleChannel) {
             await genSpeaker(i, checkXO);
           }
@@ -9328,12 +9326,12 @@ zip.file("_micCal.txt", micCal);
             await postDelete(k);
           }
         }
-        console.info(`${cmdIds} - Initial XO: ${rolloff}hz → Best XO: ${bestXO}hz`);
         customCrossover[(i - nSpeakers) / 2] = bestXO;
         if (!singleChannel) {
           customCrossover[1 + (i - nSpeakers) / 2] = bestXO;
           i += 2;
         }
+        console.infoUpdate(`${cmdIds} - Initial XO: ${rolloff}hz → Best XO: ${bestXO}hz`);
       }
     }
     async function drawResults() {
@@ -9605,8 +9603,9 @@ zip.file("_micCal.txt", micCal);
       postSafe("http://localhost:4735/alignment-tool/mode", "Impulse", "Mode set");
       await postSafe("http://localhost:4735/alignment-tool/max-negative-delay", -hiDelay, "Maximum negative delay set to");
       await postSafe("http://localhost:4735/alignment-tool/max-positive-delay", -loDelay, "Maximum positive delay set to");
-      console.info("Commencing 'iterative' impulse alignment frequency vs expected SPL analysis. Please sit tight...")
+      console.info("Starting...")
       for (let checkFreq = start; checkFreq <= end; checkFreq++) {
+        console.infoUpdate(`Checking: @${checkFreq}Hz, Best: ${(-1 * requiredDelay).toFixed(2)}ms @${bestFreq}hz Inverted: ${isInverted}`);
         const postAlignResult = await postAlign('Align IRs', checkFreq);
         if (postAlignResult.message === 'Delay too large') { continue; }
         
@@ -9625,19 +9624,18 @@ zip.file("_micCal.txt", micCal);
           requiredDelay = delayB;
           isInverted = invertB;
         }
-        console.infoUpdate(`Checking: @${checkFreq}Hz, Best: ${(-1 * requiredDelay).toFixed(2)}ms @${bestFreq}hz Inverted: ${isInverted}`);
       }
       if (isPossible) {
         const postAlignResult = await postAlign('Align IRs', bestFreq);
         const delayB = await fetchAlign('delay-b');
         requiredDelay = -parseFloat(delayB);
         isInverted = await fetchAlign('invert-b');
-        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
         const alignedSum = await postAlign('Aligned sum');
         const parsed = JSON.parse(alignedSum.message);
         const key = Object.keys(parsed.results)[0];
         const sumIndex = parseInt(key);
         await postDelete(sumIndex);
+        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
       }
       return [isPossible, requiredDelay, isInverted];
     }
@@ -9652,8 +9650,9 @@ zip.file("_micCal.txt", micCal);
       await postSafe("http://localhost:4735/alignment-tool/mode", "Impulse", "Mode set");
       await postSafe("http://localhost:4735/alignment-tool/max-negative-delay", loDelay, "Maximum negative delay set to");
       await postSafe("http://localhost:4735/alignment-tool/max-positive-delay", hiDelay, "Maximum positive delay set to");
-      console.info("Commencing in-depth frequency and SPL analysis...")
+      console.info("Starting...")
       for (let checkFreq = start; checkFreq <= end; checkFreq++) {
+        console.infoUpdate(`Checking: @${checkFreq}Hz, Best: ${(-1 * requiredDelay).toFixed(2)}ms @${bestFreq}hz Inverted: ${isInverted}`);
         const postAlignResult = await postAlign('Align IRs', checkFreq);
         if (postAlignResult.message === 'Delay too large' && previousDelay != postAlignResult.delay) {
           previousDelay = postAlignResult.delay;
@@ -9673,20 +9672,19 @@ zip.file("_micCal.txt", micCal);
           requiredDelay = delayB;
           isInverted = invertB;
         }
-        console.infoUpdate(`Checking: @${checkFreq}Hz, Best: ${(-1 * requiredDelay).toFixed(2)}ms @${bestFreq}hz Inverted: ${isInverted}`);
       }
       if (isPossible) {
         const postAlignResult = await postAlign('Align IRs', bestFreq);
         const delayB = await fetchAlign('delay-b');
         requiredDelay = -parseFloat(delayB);
         isInverted = await fetchAlign('invert-b');
-        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
         const measurements = await fetch_mREW();
         const mCount = Object.keys(measurements).length;
         const alignedSum = await postAlign('Aligned sum');
         const parsed = JSON.parse(alignedSum.message);
         let key = Object.keys(parsed.results)[0];
         sumIndex = parseInt(key);
+        console.infoUpdate(`Optimal alignment: @${bestFreq}Hz, required delay: ${(-1 * requiredDelay).toFixed(2)}ms, isInverted: ${isInverted}`);
       }
       return [isPossible, requiredDelay, isInverted, sumIndex];
     }
